# uv-aix-agent

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  git_report_20250723_222150.xml  pyproject.toml
.claude/: settings.local.json
uv_aix_agent/: CLI_USAGE.md  README.md  __init__.py  cli.py  git_comprehensive_report.xml  git_report_20250723_221317.xml  git_report_20250723_221321.xml  git_report_20250723_221407.xml  git_report_20250723_221745.xml  git_report_20250723_221800.xml  git_report_20250723_222128.xml  git_report_20250723_222202.xml  main.py  pyproject.toml  test_report.py
uv_aix_agent/actions/: __init__.py  base_action.py
uv_aix_agent/config/: app_config.json  global_tools.xml
uv_aix_agent/config/environments/: dev.json  prod.json
uv_aix_agent/core/: __init__.py  report_engine.py  tool_manager.py  xml_parser.py
uv_aix_agent/extensions/: __init__.py
uv_aix_agent/formatters/: __init__.py
uv_aix_agent/orchestration/: __init__.py  base_workflow.py  git_workflow.py
uv_aix_agent/reports/git_analysis/: basic.xml.backup  comprehensive.xml
uv_aix_agent/reports/templates/: base_template.xml
uv_aix_agent/tools/: bash_tool.py
uv_aix_agent/tools/custom/: __init__.py
uv_aix_agent/utils/: __init__.py
uv_aix_agent/uv_aix_agent.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
